[project]
name = "robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium-robotics>=1.4.2",
    "gymnasium[classic-control]>=1.2.3",
    "mlflow>=3.8.1",
    "optuna>=4.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchviz>=0.0.3",
]
